# nails

./: .env.tpl  .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.adoc  docker-compose.yaml
metrics/: Cargo.toml
metrics/src/: lib.rs  server.rs
shutdown/: Cargo.toml
shutdown/src/: lib.rs
src/: main.rs  server.rs
ui/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml
ui/src/: app.tsx  index.tsx
ui/src/commands/: actions.ts
ui/src/models/auth/: index.ts  login.ts
ui/src/pages/auth/: login.tsx
